--- a/templates/ctb/material_available.html
+++ b/templates/ctb/material_available.html
@@ -13,16 +13,14 @@
 {% block page_name %}material_available{% endblock %}
 
 {% block page_header %}
-    <div class="container">
-        <h3 class="page-banner">Material Available</h3>
-        <div>
-            <nav style="--bs-breadcrumb-divider: '>';" aria-label="breadcrumb">
-                <ol class="breadcrumb">
-                    <li class="breadcrumb-item">Research</li>
-                    <li class="breadcrumb-item active" aria-current="page">Material Available</li>
-                </ol>
-            </nav>
-        </div>
+    <div class="page-banner">Material Available</div>
+    <div class="container mt-2">
+        <nav style="--bs-breadcrumb-divider: '>';" aria-label="breadcrumb">
+            <ol class="breadcrumb">
+                <li class="breadcrumb-item">Research</li>
+                <li class="breadcrumb-item active" aria-current="page">Material Available</li>
+            </ol>
+        </nav>
     </div>
 
 {% endblock %}
