--- a/templates/share/site_header.html
+++ b/templates/share/site_header.html
@@ -102,12 +102,13 @@
     </div>
 </nav>
 {% if 'search_facility/' in request.path %}
-    <div id="ctb-secondary-navbar" class="bg-body shadow-sm">
+    <div id="ctb-secondary-navbar">
+{#    <div id="ctb-secondary-navbar" class="bg-body shadow-sm">#}
         <div class="container">
             <nav class="nav navbar-ctb" aria-label="Secondary navigation">
-                <div title="Home Page">
-                    <img class="navbar-brand" src="{% static 'img/ctb-biosample-logo.svg' %}" alt="NIH CTB Logo"/>
-                </div>
+{#                <div title="Home Page">#}
+{#                    <img class="navbar-brand" src="{% static 'img/ctb-biosample-logo.svg' %}" alt="NIH CTB Logo"/>#}
+{#                </div>#}
                 {% if user.is_authenticated %}
                     <a class="nav-link {% if 'dashboard/' in request.path %} active {% endif %}"
                        href="{% url 'dashboard' %}">
