--- a/templates/ctb/research_projects.html
+++ b/templates/ctb/research_projects.html
@@ -13,16 +13,14 @@
 {% block page_name %}research_projects{% endblock %}
 
 {% block page_header %}
-    <div class="container">
-        <h3 class="page-banner">Research Projects Using CTB Materials</h3>
-        <div>
-            <nav style="--bs-breadcrumb-divider: '>';" aria-label="breadcrumb">
-                <ol class="breadcrumb">
-                    <li class="breadcrumb-item">Research</li>
-                    <li class="breadcrumb-item active" aria-current="page">Research Projects Using CTB Materials</li>
-                </ol>
-            </nav>
-        </div>
+    <div class="page-banner">Research Projects Using CTB Materials</div>
+    <div class="container mt-2">
+        <nav style="--bs-breadcrumb-divider: '>';" aria-label="breadcrumb">
+            <ol class="breadcrumb">
+                <li class="breadcrumb-item">Research</li>
+                <li class="breadcrumb-item active" aria-current="page">Research Projects Using CTB Materials</li>
+            </ol>
+        </nav>
     </div>
 
 {% endblock %}
@@ -31,8 +29,10 @@
     <p>Please select one of the sections below to view a breakdown of the research projects:</p>
     <div class="rounded bg-light p-3 mb-2 px-lg-5">
         <div class="list-group">
-            <a href="{% url 'research_projects_2001_2009' %}" class="list-group-item list-group-item-action"><i class="fa-solid fa-circle-arrow-right me-2"></i>Research Projects: 2001 - 2009</a>
-            <a href="{% url 'research_projects_2010_2019' %}" class="list-group-item list-group-item-action"><i class="fa-solid fa-circle-arrow-right me-2"></i>Research Projects: 2010 - 2019</a>
+            <a href="{% url 'research_projects_2001_2009' %}" class="list-group-item list-group-item-action"><i
+                    class="fa-solid fa-circle-arrow-right me-2"></i>Research Projects: 2001 - 2009</a>
+            <a href="{% url 'research_projects_2010_2019' %}" class="list-group-item list-group-item-action"><i
+                    class="fa-solid fa-circle-arrow-right me-2"></i>Research Projects: 2010 - 2019</a>
         </div>
     </div>
 {% endblock %}
