--- a/templates/ctb/schema_review_of_applications.html
+++ b/templates/ctb/schema_review_of_applications.html
@@ -13,17 +13,15 @@
 {% block page_name %}schema_of_review_of_applications{% endblock %}
 
 {% block page_header %}
-    <div class="container">
-        <h3 class="page-banner">Schema for Review of Applications</h3>
-        <div>
-            <nav style="--bs-breadcrumb-divider: '>';" aria-label="breadcrumb">
-                <ol class="breadcrumb">
-                    <li class="breadcrumb-item">Research</li>
-                    <li class="breadcrumb-item"><a href="{% url 'access_to_materials' %}">Access to Materials</a></li>
-                    <li class="breadcrumb-item active" aria-current="page">Schema for Review of Applications</li>
-                </ol>
-            </nav>
-        </div>
+<div class="page-banner">Schema for Review of Applications</div>
+    <div class="container mt-2">
+        <nav style="--bs-breadcrumb-divider: '>';" aria-label="breadcrumb">
+            <ol class="breadcrumb">
+                <li class="breadcrumb-item">Research</li>
+                <li class="breadcrumb-item"><a href="{% url 'access_to_materials' %}">Access to Materials</a></li>
+                <li class="breadcrumb-item active" aria-current="page">Schema for Review of Applications</li>
+            </ol>
+        </nav>
     </div>
 
 {% endblock %}
