--- a/templates/share/site_footer.html
+++ b/templates/share/site_footer.html
@@ -3,7 +3,7 @@
     <div class="container">
         <div class="px-2 py-3 my-1">
             <div class="row">
-                <div class="col-10">
+                <div class="col-lg-10">
                     <div>
                         ©2023 National Cancer Institute (NCI) of the National Institutes of Health, Bethesda, Maryland 20892
                         <div><a href="https://www.hhs.gov/vulnerability-disclosure-policy/index.html" target="_blank" rel="noopener noreferrer">HHS Vulnerability Disclosure</a>
@@ -14,7 +14,7 @@
                     </div>
 
                 </div>
-                <div class="col-2 text-end my-auto">
+                <div class="col-lg-2 text-end my-auto">
                     <a class="fw-bold" href="#">Back to top</a>
                 </div>
             </div>
