--- a/templates/share/site_header.html
+++ b/templates/share/site_header.html
@@ -104,7 +104,7 @@
 {% if 'search_facility/' in request.path %}
     <div id="ctb-secondary-navbar">
 {#    <div id="ctb-secondary-navbar" class="bg-body shadow-sm">#}
-        <div class="container">
+        <div class="container pt-2">
             <nav class="nav navbar-ctb" aria-label="Secondary navigation">
 {#                <div title="Home Page">#}
 {#                    <img class="navbar-brand" src="{% static 'img/ctb-biosample-logo.svg' %}" alt="NIH CTB Logo"/>#}
