--- a/templates/two_factor/core/backup_tokens.html
+++ b/templates/two_factor/core/backup_tokens.html
@@ -1,15 +1,18 @@
 {% extends "two_factor/_base_focus.html" %}
 {% load i18n %}
+{% block page_header %}
+    <div class="page-banner">{% block title %}{% trans "Backup Tokens" %}{% endblock %}</div>
+{% endblock %}
 
 {% block content %}
     <div class="container my-5">
         <div class="row user-row justify-content-center">
             <div class="col-md-10">
                 <div class="card user-panel">
-                    <div class="card-header">
-                        <h4><i class="fa-solid fa-code"></i> {% block title %}{% trans "Backup Tokens" %}{% endblock %}
-                        </h4>
-                    </div>
+{#                    <div class="card-header">#}
+{#                        <h4><i class="fa-solid fa-code"></i> {% block title %}{% trans "Backup Tokens" %}{% endblock %}#}
+{#                        </h4>#}
+{#                    </div>#}
                     <div class="card-body px-5 py-3">
 
                         <p>{% blocktrans trimmed %}Backup tokens can be used when your primary and backup
