--- a/templates/two_factor/core/setup.html
+++ b/templates/two_factor/core/setup.html
@@ -4,15 +4,17 @@
 {% block extra_media %}
     {{ form.media }}
 {% endblock %}
-
+{% block page_header %}
+    <div class="page-banner">{% block title %}{% trans "Enable Two-factor Authentication" %}{% endblock %}</div>
+{% endblock %}
 {% block content %}
     <div class="row justify-content-center my-5">
         <div class="col-lg-5 accounts-col">
             <div class="card user-panel">
-                <div class="card-header">
-                    <h5>{% block title %}{% trans "Enable Two-Factor Authentication" %}{% endblock %}
-                    </h5>
-                </div>
+{#                <div class="card-header">#}
+{#                    <h5>{% block title %}{% trans "Enable Two-Factor Authentication" %}{% endblock %}#}
+{#                    </h5>#}
+{#                </div>#}
                 <div class="card-body px-4 py-3">
                     {% if wizard.steps.current == 'welcome' %}
                         <div>{% blocktrans trimmed %}You are about to take your account security to the
