--- a/templates/two_factor/profile/disable.html
+++ b/templates/two_factor/profile/disable.html
@@ -1,15 +1,17 @@
 {% extends "two_factor/_base_focus.html" %}
 {% load i18n %}
 {% load custom_tags %}
-
+{% block page_header %}
+    <div class="page-banner">{% block title %}{% trans "Disable Two-factor Authentication" %}{% endblock %}</div>
+{% endblock %}
 {% block content %}
     <div class="row justify-content-center my-5">
         <div class="col-lg-5 accounts-col">
             <div class="card user-panel">
-                <div class="card-header">
-                    <h5>{% block title %}{% trans "Disable Two-factor Authentication" %}{% endblock %}
-                    </h5>
-                </div>
+{#                <div class="card-header">#}
+{#                    <h5>{% block title %}{% trans "Disable Two-factor Authentication" %}{% endblock %}#}
+{#                    </h5>#}
+{#                </div>#}
                 <div class="card-body px-4 py-3">
                     <p>{% blocktrans trimmed %}You are about to disable two-factor authentication. This
                         weakens your account security, are you sure?{% endblocktrans %}</p>
