--- a/templates/donors/saved_searches.html
+++ b/templates/donors/saved_searches.html
@@ -18,9 +18,10 @@
         <div class="row">
             <div class="col">
                 <div class="border rounded bg-light p-3">
-                    <h4>
+                    <h5 class="fw-bold">
                         My Saved Searches
-                    </h4>
+                    </h5>
+                    <hr>
                     <div>
                         {% include 'donors/filter_saved_searches.html' %}
                     </div>
