--- a/templates/share/site_header.html
+++ b/templates/share/site_header.html
@@ -5,7 +5,8 @@
 
 <nav id="ctb-main-navbar" class="navbar navbar-expand-lg fixed-top navbar-dark py-4" aria-label="Main navigation">
     <div class="container">
-        <a class="navbar-brand {% if request.path == '/' %} active {% endif %}" href="{% url 'landing_page' %}"><i class="fas fa-home"></i></a>
+        <a class="navbar-brand {% if request.path == '/' %} active {% endif %}" href="{% url 'landing_page' %}"><i
+                class="fas fa-home"></i></a>
         <button class="navbar-toggler p-0 border-0" type="button" id="navbarSideCollapse" data-bs-toggle="collapse"
                 data-bs-target="#ctb-collapsible-navbar"
                 aria-label="Toggle navigation">
@@ -16,10 +17,10 @@
                 <li class="nav-item">
                     <a class="nav-link
                         {% if 'search_facility' in request.path %} active {% endif %}"
-                        aria-current="page" {% if user.is_authenticated %} href="{% url 'dashboard' %}"
-                        {% else %}
-                        href="{% url 'two_factor:login' %}"
-                        {% endif %}>
+                       aria-current="page" {% if user.is_authenticated %} href="{% url 'dashboard' %}"
+                    {% else %}
+                       href="{% url 'two_factor:login' %}"
+                    {% endif %}>
                         Biosample Search
                     </a>
                 </li>
@@ -48,28 +49,24 @@
                         <li><a class="dropdown-item" href="{% url 'material_available' %}">Material Available</a></li>
                     </ul>
                 </li>
-{#                <li class="nav-item dropdown">#}
-{#                    <a class="nav-link dropdown-toggle {% if 'resources/' in request.path %} active {% endif %}"#}
-{#                       id="dropdown-resources" data-bs-toggle="dropdown"#}
-{#                       aria-expanded="false">Resources</a>#}
-{#                    <ul class="dropdown-menu" aria-labelledby="dropdown-resources">#}
-{#                        <li><a class="dropdown-item" href="{% url 'bibliography' %}">Publications using CTB Samples and#}
-{#                            Data</a></li>#}
-{#                        <li><a class="dropdown-item" href="{% url 'useful_links' %}">Useful External Links</a></li>#}
-{#                        <li><a class="dropdown-item" href="{% url 'podcasts_and_videos' %}">Useful Podcasts and#}
-{#                            Videos</a></li>#}
-{#                    </ul>#}
-{#                </li>#}
+                {#                <li class="nav-item dropdown">#}
+                {#                    <a class="nav-link dropdown-toggle {% if 'resources/' in request.path %} active {% endif %}"#}
+                {#                       id="dropdown-resources" data-bs-toggle="dropdown"#}
+                {#                       aria-expanded="false">Resources</a>#}
+                {#                    <ul class="dropdown-menu" aria-labelledby="dropdown-resources">#}
+                {#                        <li><a class="dropdown-item" href="{% url 'bibliography' %}">Publications using CTB Samples and#}
+                {#                            Data</a></li>#}
+                {#                        <li><a class="dropdown-item" href="{% url 'useful_links' %}">Useful External Links</a></li>#}
+                {#                        <li><a class="dropdown-item" href="{% url 'podcasts_and_videos' %}">Useful Podcasts and#}
+                {#                            Videos</a></li>#}
+                {#                    </ul>#}
+                {#                </li>#}
 
 
-
-
-
-
-{#                <li class="nav-item">#}
-{#                    <a class="nav-link {% if 'news' in request.path %} active {% endif %}" href="{% url 'latest_news' %}">Latest#}
-{#                        News</a>#}
-{#                </li>#}
+                {#                <li class="nav-item">#}
+                {#                    <a class="nav-link {% if 'news' in request.path %} active {% endif %}" href="{% url 'latest_news' %}">Latest#}
+                {#                        News</a>#}
+                {#                </li>#}
                 <li class="nav-item">
                     <a class="nav-link {% if 'contact/' in request.path %} active {% endif %}"
                        href="{% url 'contact' %}">Contact Us</a>
@@ -103,18 +100,14 @@
 </nav>
 {% if 'search_facility/' in request.path %}
     <div id="ctb-secondary-navbar">
-{#    <div id="ctb-secondary-navbar" class="bg-body shadow-sm">#}
         <div class="container pt-2">
             <nav class="nav navbar-ctb" aria-label="Secondary navigation">
-{#                <div title="Home Page">#}
-{#                    <img class="navbar-brand" src="{% static 'img/ctb-biosample-logo.svg' %}" alt="NIH CTB Logo"/>#}
-{#                </div>#}
                 {% if user.is_authenticated %}
                     <a class="nav-link {% if 'dashboard/' in request.path %} active {% endif %}"
                        href="{% url 'dashboard' %}">
                         Dashboard
                     </a>
-                    <a class="nav-link {% if 'search_tissue_samples' in request.path or '_search_facility' in request.path %} active {% endif %}"
+                    <a class="nav-link {% if 'search_clinical' in request.path or 'search_tissue_samples' in request.path or '_search_facility' in request.path %} active {% endif %}"
                        href="{% url 'search_tissue_samples' %}">Search Samples</a>
                     <a class="nav-link {% if 'saved_searches/' in request.path %} active {% endif %}"
                        href="{% url 'saved_searches' %}">My Saved Searches</a>
